# logs-api

./: Cargo.toml  README.md  setup-and-test.sh
src/: main.rs
src/models/: log_entry.rs
src/routes/: health_check.rs  insert_logs.rs  mod.rs  query_logs.rs
src/utils/: mod.rs
