[package]
name = "logs-api"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "54.3.1"
axum = { version = "0.8.3", features = ["macros"] }
chrono = "0.4.40"
parquet = "54.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
